--- a/.travis.yml
+++ b/.travis.yml
@@ -15,9 +15,10 @@ deploy:
   app: "docker-react"
   env: "Dockerreact-env"
   bucket_name: "elasticbeanstalk-eu-west-2-543586549126"
-  bucket_path: "docker-react"
+  # bucket_path: "docker-react"
   on:
     branch: main
-  access_key_id: "$AWS_ACCESS_KEY"
+  access_key_id: 
+    secure: "$AWS_ACCESS_KEY"
   secret_access_key:
     secure: "$AWS_SECRET_KEY"
